// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Games Controller > createGame > Should create relevant state on create game 1`] = `
{
  "games": {
    "1": {
      "config": {
        "dndEnabled": false,
        "maxCardsOnTable": 12,
        "playersMaxCount": 4,
        "startingDelayInSec": 4,
      },
      "id": "1",
      "name": "createGame",
      "players": {},
      "playground": {
        "decks": [],
        "droppedDecks": [],
      },
      "spectators": {},
      "status": "New",
    },
  },
  "users": {},
}
`;

exports[`Games Controller > joinGame > Should create relevant state on join room as first player 1`] = `
{
  "games": {
    "1": {
      "config": {
        "dndEnabled": false,
        "maxCardsOnTable": 12,
        "playersMaxCount": 4,
        "startingDelayInSec": 4,
      },
      "id": "1",
      "name": "createGame",
      "players": {
        "userId": {
          "cards": [],
          "id": "userId",
          "isHost": true,
          "ligrettoDeck": {
            "cards": [],
            "isHidden": true,
          },
          "stackDeck": {
            "cards": [],
            "isHidden": true,
          },
          "stackOpenDeck": {
            "cards": [],
            "isHidden": true,
          },
          "status": "DontReadyToPlay",
        },
      },
      "playground": {
        "decks": [],
        "droppedDecks": [],
      },
      "spectators": {},
      "status": "New",
    },
  },
  "users": {
    "userId": {
      "currentGameId": "1",
      "id": "userId",
      "socketIds": [
        "socketId",
      ],
    },
  },
}
`;

exports[`Games Controller > joinGame > Should create relevant state on join room by second connection 1`] = `
{
  "games": {
    "1": {
      "config": {
        "dndEnabled": false,
        "maxCardsOnTable": 12,
        "playersMaxCount": 4,
        "startingDelayInSec": 4,
      },
      "id": "1",
      "name": "createGame",
      "players": {
        "userId": {
          "cards": [],
          "id": "userId",
          "isHost": true,
          "ligrettoDeck": {
            "cards": [],
            "isHidden": true,
          },
          "stackDeck": {
            "cards": [],
            "isHidden": true,
          },
          "stackOpenDeck": {
            "cards": [],
            "isHidden": true,
          },
          "status": "DontReadyToPlay",
        },
      },
      "playground": {
        "decks": [],
        "droppedDecks": [],
      },
      "spectators": {},
      "status": "New",
    },
  },
  "users": {
    "userId": {
      "currentGameId": "1",
      "id": "userId",
      "socketIds": [
        "socketId",
        "socketId",
      ],
    },
  },
}
`;

exports[`Games Controller > joinGame > Should create relevant state on join room second player 1`] = `
{
  "games": {
    "1": {
      "config": {
        "dndEnabled": false,
        "maxCardsOnTable": 12,
        "playersMaxCount": 4,
        "startingDelayInSec": 4,
      },
      "id": "1",
      "name": "createGame",
      "players": {
        "secondUserId": {
          "cards": [],
          "id": "secondUserId",
          "isHost": false,
          "ligrettoDeck": {
            "cards": [],
            "isHidden": true,
          },
          "stackDeck": {
            "cards": [],
            "isHidden": true,
          },
          "stackOpenDeck": {
            "cards": [],
            "isHidden": true,
          },
          "status": "DontReadyToPlay",
        },
        "userId": {
          "cards": [],
          "id": "userId",
          "isHost": true,
          "ligrettoDeck": {
            "cards": [],
            "isHidden": true,
          },
          "stackDeck": {
            "cards": [],
            "isHidden": true,
          },
          "stackOpenDeck": {
            "cards": [],
            "isHidden": true,
          },
          "status": "DontReadyToPlay",
        },
      },
      "playground": {
        "decks": [],
        "droppedDecks": [],
      },
      "spectators": {},
      "status": "New",
    },
  },
  "users": {
    "secondUserId": {
      "currentGameId": "1",
      "id": "userId",
      "socketIds": [
        "secondUserSocketId",
      ],
    },
    "userId": {
      "currentGameId": "1",
      "id": "secondUserId",
      "socketIds": [
        "secondUserSocketId",
      ],
    },
  },
}
`;

exports[`Games Controller > leaveFromRoomHandler > Should create a relevant game state if one of two players leaved 1`] = `
{
  "games": {
    "1": {
      "config": {
        "dndEnabled": false,
        "maxCardsOnTable": 12,
        "playersMaxCount": 4,
        "startingDelayInSec": 4,
      },
      "id": "1",
      "name": "createGame",
      "players": {
        "userTwoId": {
          "cards": [],
          "id": "userTwoId",
          "isHost": true,
          "ligrettoDeck": {
            "cards": [],
            "isHidden": true,
          },
          "stackDeck": {
            "cards": [],
            "isHidden": true,
          },
          "stackOpenDeck": {
            "cards": [],
            "isHidden": true,
          },
          "status": "DontReadyToPlay",
        },
      },
      "playground": {
        "decks": [],
        "droppedDecks": [],
      },
      "spectators": {},
      "status": "Pause",
    },
  },
  "users": {
    "userOneId": {
      "currentGameId": "1",
      "id": "userOneId",
      "socketIds": [
        "socketId",
      ],
    },
    "userTwoId": {
      "currentGameId": "1",
      "id": "userTwoId",
      "socketIds": [
        "userTwoId",
      ],
    },
  },
}
`;

exports[`Games Controller > leaveFromRoomHandler > Should create a relevant state if last user disconnected 1`] = `
{
  "games": {},
  "users": {
    "userOneId": {
      "currentGameId": "1",
      "id": "userOneId",
      "socketIds": [
        "socketId",
      ],
    },
  },
}
`;

exports[`Games Controller > leaveFromRoomHandler > Should remove current socketId from user socket ids if user connected from few accounts 1`] = `
{
  "games": {
    "1": {
      "config": {
        "dndEnabled": false,
        "maxCardsOnTable": 12,
        "playersMaxCount": 4,
        "startingDelayInSec": 4,
      },
      "id": "1",
      "name": "createGame",
      "players": {
        "userOneId": {
          "cards": [],
          "id": "userOneId",
          "isHost": true,
          "ligrettoDeck": {
            "cards": [],
            "isHidden": true,
          },
          "stackDeck": {
            "cards": [],
            "isHidden": true,
          },
          "stackOpenDeck": {
            "cards": [],
            "isHidden": true,
          },
          "status": "DontReadyToPlay",
        },
      },
      "playground": {
        "decks": [],
        "droppedDecks": [],
      },
      "spectators": {},
      "status": "New",
    },
  },
  "users": {
    "userOneId": {
      "currentGameId": "1",
      "id": "userOneId",
      "socketIds": [
        "socket1",
        "socket2",
      ],
    },
  },
}
`;
